<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal_detail_ingredient_header"
            android:textSize="24sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"/>
        <Space
            android:layout_width="4dp"
            android:layout_height="0dp"/>
        <TextView
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_meal_add_ingredient_button_title"
            android:textColor="@color/blue"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etIngredient"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/add_meal_edit_text_ingredient"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Space
            android:layout_width="4dp"
            android:layout_height="0dp"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMeasurement"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/add_meal_edit_text_measurement"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="4dp"/>

    <LinearLayout
        android:id="@+id/llIngredientMeasurementItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

</LinearLayout>