<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/vAppbar"
        layout="@layout/app_bar_menu"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            android:showDividers="middle"
            android:divider="@drawable/height_divider">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/vThumbnail"
                android:layout_height="256dp"
                android:layout_width="256dp"
                android:layout_marginBottom="12dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/mark"
                app:shapeAppearanceOverlay="@style/RoundedCorner"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMealName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_meal_edit_text_meal_name_title"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMealArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_meal_edit_text_area_title"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMealCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_meal_edit_text_category_title"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etThumbnailUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_meal_edit_text_thumbnail_url_title"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etYoutubeUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_meal_edit_text_youtube_url_title"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etInstruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_meal_edit_text_instruction_title" />
            </com.google.android.material.textfield.TextInputLayout>

            <include
                android:id="@+id/llAddIngredientSection"
                layout="@layout/add_meal_ingredient_section" />
        </LinearLayout>
    </ScrollView>



</LinearLayout>